<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/indigo600"
    tools:context="com.example.viniciusvianna.smavc_paciente.TelaCadastro">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_tc_nome"
            android:hint="@string/nome"
            android:textColorHint="@color/grey100"
            android:inputType="textPersonName"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/idade"
                android:textColorHint="@color/grey100"
                android:id="@+id/et_tc_idade"
                android:inputType="number"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/sexo"
                android:id="@+id/sp_tc_sexo"
                android:spinnerMode="dialog"
                android:splitMotionEvents="true"
                android:background="@drawable/contorno"
                android:padding="@dimen/margem"/>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_tc_login"
            android:hint="@string/login"
            android:textColorHint="@color/grey100"
            android:inputType="textEmailAddress"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_tc_senha"
            android:hint="@string/senha"
            android:textColorHint="@color/grey100"
            android:inputType="textPassword"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:splitMotionEvents="true"
            android:entries="@array/array_usuario"
            android:layout_marginTop="@dimen/margem"
            android:layout_marginBottom="@dimen/margem"
            android:padding="@dimen/margem"
            android:id="@+id/sp_tc_user"
            android:background="@drawable/contorno"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_tc_cad"
            android:hint="@string/btn_cad"
            android:textColorHint="@color/grey100"
            android:background="@drawable/contorno"
            android:layout_marginTop="@dimen/margem"/>

    </LinearLayout>
</RelativeLayout>
